--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: edu-polo-app
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn core.wsgi:application --bind 0.0.0.0:$PORT
+    buildCommand: cd src && pip install -r ../requirements.txt && python manage.py collectstatic --noinput
+    startCommand: cd src && gunicorn core.wsgi:application --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.4
