implementacion sistema de correo aif dominio seteado a polos.aif.gob.ar 2

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ EMAIL_HOST_PASSWORD=tu_password_app
 
 # Seguridad (Opcional)
 CSRF_TRUSTED_ORIGINS=https://midominio.com,https://www.midominio.com
+
+
+
+
+PUBLIC_BASE_URL=https://polos.aif.gob.ar
